--- a/assingment1.html
+++ b/assingment1.html
@@ -12,7 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:wght@100&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     
 </head>
 <body>
@@ -63,20 +64,25 @@
             <h4>We will use your donation one-hundred percent effective way</h4>
             <div id="third-line-fexible-container">
 
-                <div class="trline-container">
-                    <h1  class="thied-line-h-one"> 
+                <div class="trline-container" style="background-color: rgba(5, 5, 234, 0.158);" >
+                    <h1  class="thied-line-h-one">
+                        <i class="material-symbols-outlined" style="font-size: 55px;">Ramen_Dining</i> 
                         food
                      </h1>
                     <h3>may victim isn't able to cook for theirself or arrange food theirself.We going to give food for them by your donation </h3>
                 </div>
-                <div class="trline-container">
+                <div class="trline-container"  style="background-color: rgba(255, 255, 0, 0.344)">
                     <h1  class="thied-line-h-one">
+                        <i class="material-symbols-outlined" style="font-size: 55px;" >home
+                            </i>
                         Shelther
                     </h1>
                     <h3>Somany people lost their home.Whater pressure borke their house.We will give them shelter by your donation</h3>
                 </div>
-                <div class="trline-container" style="background-color: hsl(334, 100%, 50%);">
+                <div class="trline-container" style="background-color: hsla(334, 100%, 50%, 0.296);">
                     <h1 class="thied-line-h-one">
+                        <i class="material-symbols-outlined" style="font-size: 55px;" >
+                            medical_services</i>
                         Medicine
                     </h1>
                     <h3>Many people are injured.They became so weak and sick.We will give them madicene by your money</h3>
