--- a/assingment1.html
+++ b/assingment1.html
@@ -69,7 +69,7 @@
                         <i class="material-symbols-outlined" style="font-size: 55px;">Ramen_Dining</i> 
                         food
                      </h1>
-                    <h3>may victim isn't able to cook for theirself or arrange food theirself.We going to give food for them by your donation </h3>
+                    <h3>Many victim isn't able to cook for theirself or arrange food theirself.We going to give food for them by your donation </h3>
                 </div>
                 <div class="trline-container"  style="background-color: rgba(255, 255, 0, 0.344)">
                     <h1  class="thied-line-h-one">
@@ -90,6 +90,68 @@
             </div>
             </div>
         </div>
+    </section>
+    <section>
+        <div id="forth-line">
+            <div id="forthline-text">
+                <h1 style="font-family:'Bebas Neue', cursive; text-align: center; font-size: 50px; ">A week on, relief still elusive</h1>
+                <h3 class="headline-font">At least 42 people have died in the devastating floods that have hit the country's northern and northeastern districts, while lakhs are stranded as new areas are inundated every day.</h3>
+                <button class="third-button">Read More <i class="material-symbols-outlined" style="font-size: 10px;">
+                    chevron_right</i> </button>
+
+            </div class="forth-line" >
+            <div >
+                <img src="donation12.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section>
+        <div id="fifth-line">
+            <div>
+                <img src="donation4.jpg" alt="">
+            </div>
+            <div id="fifth-line-text">
+                <h1  style="font-family:'Bebas Neue', cursive; text-align: center; font-size: 50px;">Sylhet flood: Bodies of missing mother, son found after 4 days</h1>
+                <h3 class="headline-font">Four days after the incident, police recovered the bodies of Nazmun Nesa and Abdur Rahman, of Mahalikhala village in Sylhet's Jaintapur upazila, and sent them to Sylhet MAG Osmani Medical College Hospital for autopsy.</h3>
+                <button class="third-button">Read More <i class="material-symbols-outlined" style="font-size: 10px;">
+                    chevron_right</i> </button>
+            </div>
+        </div>
+    </section>
+    
+    <section>
+        <div id="from">
+            <hr>
+        <h1  style="font-family:'Bebas Neue', cursive; text-align: center; font-size: 50px; color: red; ">
+            Make Connection 
+        </h1>
+        <h3 class="headline-font">Rageinter now fo connect with us</h3>
+        <div id="from-box">
+            <form >
+               Name  : <input type="text" style="padding: 15px"><br><br>
+               E-mail: <input type="text" style="padding: 15px"><br><br>
+               Phone : <input type="number" style="padding: 15px">   
+            </form>
+            <button id="singup-butoon">Sing Up</button>
+        </div>
+        </div>
+    </section>
+    <section>
+        <footer id="footer">
+            <div>    
+                <h1 class="footer-h-one">Be kindful</h1>
+                <h3 class="headline-font">people are in a critical situation,they need help</h3>
+            </div >
+            <div style="display: flex;" >
+                <div>
+                    contact : 01xxxxxxxxx <br>
+                    Another : 01xxxxxxxxx
+               </div>
+                <div style="margin-left: 70%;">
+                    E-mail :amithasanarfe1999@gmail.com
+                </div>
+            </div>
+        </footer>
     </section>
    
 </body>
